# BeeZero

./: .gitignore  BeeScript.md  LICENSE.txt  README.md  platformio.ini
images/: wiring-back.drawio  wiring.drawio
lib/BeeScript/: BeeScript.cpp  BeeScript.h  CMakeLists.txt  commands.cpp  commands.h  commands_test.cc  keys.cpp  keys.h  test.sh  utils.cpp  utils.h
src/: main.cpp
